Textualizado de Videojuegos terminado

--- a/pages/videojuegos.html
+++ b/pages/videojuegos.html
@@ -69,7 +69,9 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, adipisci architecto, ab quia accusamus numquam sequi voluptatibus atque facere repellat fuga sint assumenda blanditiis maiores magnam quae quisquam beatae voluptatum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic quisquam est in ipsa, laboriosam laborum et iste unde ea aliquid, pariatur error quibusdam laudantium consectetur, nesciunt sed? Nostrum, doloremque nulla.</p>
+        <p>Su historia tiene lugar en el ficticio reino de Boletaria, y si bien no se precisa la época en la que se encuentra, se concluye que es en la Edad Media, debido a sus características. En la antigüedad, debido al mal uso de la magia conocida como las Artes de Alma, Boletaria fue atacada por un ser llamado "El Anciano" y el mundo casi fue consumido por la "Niebla Profunda" que trajo con él y los demonios devoradores de almas que surgieron de ella. El Anciano es un ser demoníaco de un poder supuestamente inimaginable para el ser humano según lo relatado a lo largo de la historia; también se cuenta que el dios en que creían los habitantes de Boletaria era él, aunque las personas no lo supieran.</p>
+        <p>Finalmente se logró adormecer y aprisionar al Anciano en el Nexo, un santuario supuestamente ubicado al norte del reino, salvando así lo que quedaba de Boletaria. En el presente del juego, el actual gobernante, el rey Allant, restauró las Artes de Alma, provocando así el despertar del Anciano y su ejército de demonios. Boletaria ahora se encuentra siendo consumida por dichos demonios y la niebla profunda que devora todo a su paso, y los humanos que han sido despojados de sus almas por demonios se están convirtiendo en monstruos salvajes sin cordura. Los jugadores asumen el papel de un guerrero que se adentra en la niebla que envuelve a Boletaria. Y este después de ser asesinado, se despierta en el Nexo y se encuentra con una demonio benévola llamada Dama de Negro, así como con varios otros personajes.</p>
+        <p>Ahora ligado al Nexo hasta que el Anciano vuelva a dormir, el jugador viaja a cinco regiones del reino de Boletaria, matando a los poderosos demonios que controlan esas áreas y absorbiendo sus almas para aumentar su fuerza, y así poder enfrentarse al Rey Allant. Estos demonios recolectan almas de todo ser vivo para dárselas al Anciano ya que este no puede recolectarlas por sí mismo debido a su encierro en el Nexo; se dice que aquel que pierde su alma estando vivo pierde su mente, sus recuerdos y su humanidad convirtiéndose en una bestia violenta y sanguinaria, y que si un humano llegase a obtener un alma de demonio, este adquiriría un poder inimaginable. Una vez eliminados todos los demonios, y habiendo derrotado al rey Allant, el Anciano hará su llamada al jugador dando inicio al evento final del juego.</p>
       </section>
       <section>
         <h1 class="text-center">DARK SOULS</h1>
@@ -99,7 +101,9 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, adipisci architecto, ab quia accusamus numquam sequi voluptatibus atque facere repellat fuga sint assumenda blanditiis maiores magnam quae quisquam beatae voluptatum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic quisquam est in ipsa, laboriosam laborum et iste unde ea aliquid, pariatur error quibusdam laudantium consectetur, nesciunt sed? Nostrum, doloremque nulla.</p>
+        <p>En la Edad Antigua, el mundo era amorfo y estaba envuelto en niebla. Una tierra de riscos grises, árboles gigantescos y dragones eternos. Pero entonces llegó el Fuego. Y con el Fuego, llegó la Disparidad. Calor y frío, vida y muerte, y por supuesto... Luz y Oscuridad. Entonces, ellos surgieron de la oscuridad. Y encontraron las almas de los dioses dentro de la llama. Nito, el primero de los muertos. La bruja de Izalith y sus hijas del caos. Gwyn el Señor de la Luz Solar, y sus leales caballeros. Y el furtivo pigmeo, a menudo olvidado.</p>
+        <p>Con la fuerza de los dioses, desafiaron a los dragones. Gwyn y sus poderosos rayos despellejaron sus escamas pétreas. Las brujas tejieron tormentas de fuego. Nito provocó un miasma de muerte y enfermedad. Y Seath el Descamado traicionó a los suyos, y los dragones desaparecieron. Así comenzó la Edad del Fuego. Pero pronto las llamas se apagarán, y sólo quedará Oscuridad. Ahora solo quedan ascuas, y el hombre ya no ve el sol; tan solo noches eternas. Entre los vivos pueden verse a los que sufren la maldición de la Señal Oscura.</p>
+        <p>Así es. La Señal Oscura de los no muertos. En esta tierra, han reunido a todos los no muertos para llevarlos al norte. Allí los encerrarán hasta que llegue el fin del mundo. Es tu destino...Pero las antiguas leyendas dicen que un día un no muerto será elegido para abandonar el Refugio de los no muertos, en peregrinación a la tierra de los antiguos dioses, Lordran.</p>
       </section>
 
       <section>
@@ -130,7 +134,7 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, adipisci architecto, ab quia accusamus numquam sequi voluptatibus atque facere repellat fuga sint assumenda blanditiis maiores magnam quae quisquam beatae voluptatum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic quisquam est in ipsa, laboriosam laborum et iste unde ea aliquid, pariatur error quibusdam laudantium consectetur, nesciunt sed? Nostrum, doloremque nulla.</p>
+        <p>El juego tiene lugar en Drangleic, una tierra anteriormente próspera bajo el mando del rey Vendrick, la cual ha caído en la ruina a través de los años debido a la guerra entre humanos y gigantes, la desaparición repentina del rey y una nueva plaga abismal. Al igual que otros personajes, el protagonista ha llegado al reino desmoronado en busca de una cura para su aflicción, la maldición del no muerto.</p>
       </section>
       <section>
         <h1 class="text-center">DARK SOULS III</h1>
@@ -160,7 +164,8 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, adipisci architecto, ab quia accusamus numquam sequi voluptatibus atque facere repellat fuga sint assumenda blanditiis maiores magnam quae quisquam beatae voluptatum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic quisquam est in ipsa, laboriosam laborum et iste unde ea aliquid, pariatur error quibusdam laudantium consectetur, nesciunt sed? Nostrum, doloremque nulla.</p>
+        <p>Dark Souls 3 es el final de la saga y presenta un mundo, el Reino de Lothric, al borde del Apocalipsis por culpa de "la maldición de los no muertos", y la razón por la que el mundo aún no se ha sumido en la oscuridad totalmente es el sacrificio que muchos héroes e incluso dioses hicieron al reavivar la llama original, la cual se encarga de mantener la "Era del fuego", dejando que esta consumiera sus respectivas almas y cuerpos.</p>
+        <p>El protagonista, el personaje al que se da vida en este título, es uno de los que llaman "Latentes"; estas personas son humanos que consiguieron llegar al horno de la Primera Llama, trataron de enlazarla, pero fueron consumidos y hechos ceniza sin conseguir su objetivo. Estos humanos son despertados cuando los Señores de la Ceniza (aquellos que sí que fueron suficientemente poderosos como para enlazar la Primera Llama) son despertados pero no cumplen su deber: quedarse en sus tronos (en el Santuario de Enlace del Fuego) hasta que se les vuelva a sacrificar para enlazar la Primera Llama. Es decir, cuando los Señores de la Ceniza no quieren volver a prolongar la Era de los Dioses (la era del fuego) y abandonan sus tronos, los Latentes deben ir a por ellos para matarlos y devolver sus cenizas a los Tronos, y el Latente que lo consiga, deberá, como última parte del plan, inmolarse él mismo, y convertirse de esta forma, en un Señor de la Ceniza.</p>
       </section>
       <section>
         <h1 class="text-center">BLOODBORNE</h1>
@@ -190,7 +195,8 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, adipisci architecto, ab quia accusamus numquam sequi voluptatibus atque facere repellat fuga sint assumenda blanditiis maiores magnam quae quisquam beatae voluptatum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic quisquam est in ipsa, laboriosam laborum et iste unde ea aliquid, pariatur error quibusdam laudantium consectetur, nesciunt sed? Nostrum, doloremque nulla.</p>
+        <p>El juego tiene lugar en la ciudad gótica decrépita de Yharnam, conocida por sus avances médicos basados en el uso de la sangre como principal elemento. Con los años, muchos peregrinos viajaron a la ciudad en busca del remedio para curar sus aflicciones. El jugador, por razones desconocidas, emprende el viaje a Yharnam buscando una poderosa sangre conocida como Sangre pálida que más tarde descubriremos, proviene de unos seres adorados como dioses apodados los grandes, cuyo diseño parece inspirado en las criaturas del escritor H. P. Lovecraft. Una vez en Yharnam, descubrimos que la ciudad está infestada por una enfermedad endémica que ha transformado a la mayoría de sus ciudadanos en criaturas bestiales y ulcerosas. Deberemos recorrer las calles de Yharnam y sobrevivir a las emboscadas de unos habitantes violentamente trastornados y sus criaturas monstruosas.</p>
+        <p>Poco después de su llegada a Yharnam, una vez fallece el personaje del jugador, este se encuentra con un reino espectral llamado Sueño del Cazador, que actúa como un santuario y taller. El jugador se encuentra con dos entidades: Gehrman, un hombre anciano en silla de ruedas que ofrece asesoramiento a los Cazadores; y La Muñeca, una muñeca de tamaño natural, viva, que ayuda al jugador a subir de nivel. Gehrman informa al jugador que a fin de obtener la sangre que busca, tienen que cazar a los diferentes monstruos que asolan Yharnam, para destruir esta pesadilla y así evitar que la oscuridad invada los sueños.</p>
       </section>
       <section>
         <h1 class="text-center">SEKIRO SHADOWS DIE TWICE</h1>
@@ -220,7 +226,7 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, adipisci architecto, ab quia accusamus numquam sequi voluptatibus atque facere repellat fuga sint assumenda blanditiis maiores magnam quae quisquam beatae voluptatum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic quisquam est in ipsa, laboriosam laborum et iste unde ea aliquid, pariatur error quibusdam laudantium consectetur, nesciunt sed? Nostrum, doloremque nulla.</p>
+        <p>Sekiro: Shadows Die Twice está ambientado en un Japón del periodo Sengoku a finales del siglo XVI, un período de conflicto constante entre la vida y la muerte. Su protagonista es un shinobi que fue dado por muerto después de que su señor fuera secuestrado y su brazo cercenado por un líder samurái del Clan Ashina. Este shinobi despierta y descubre que su brazo ha sido reemplazado por una prótesis por un misterioso busshi que le llama Sekiro, el "lobo manco". Armado con una katana y la prótesis, que le permite instalar diferentes herramientas y aparatos, su propósito es rescatar a su señor y vengarse.</p>
       </section>
       <section>
         <h1 class="text-center">CODEVEIN</h1>
@@ -250,7 +256,7 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, adipisci architecto, ab quia accusamus numquam sequi voluptatibus atque facere repellat fuga sint assumenda blanditiis maiores magnam quae quisquam beatae voluptatum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic quisquam est in ipsa, laboriosam laborum et iste unde ea aliquid, pariatur error quibusdam laudantium consectetur, nesciunt sed? Nostrum, doloremque nulla.</p>
+        <p>El mundo se ha venido abajo a raíz de los acontecimientos derivados de una anomalía geológica catastrófica. Unos enormes pilares han surgido de las profundidades de la corteza terrestre convirtiendo las antaño florecientes ciudades en tumbas de una época pasada. De sus cenizas han nacido las «apariciones», seres que, por medios sobrenaturales, han sacrificado sus recuerdos a cambio de mantener su humanidad a base de consumir sangre. Ellos llaman «Vein» a su hogar y lo defienden contra los «perdidos», apariciones que han sucumbido a la sed de sangre y han perdido todo sentido de lo que fueron. Los habitantes de Vein tienen un objetivo: escapar de este infierno.</p>
       </section>
       <section>
         <h1 class="text-center">MORTAL SHELL</h1>
@@ -280,7 +286,7 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, adipisci architecto, ab quia accusamus numquam sequi voluptatibus atque facere repellat fuga sint assumenda blanditiis maiores magnam quae quisquam beatae voluptatum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic quisquam est in ipsa, laboriosam laborum et iste unde ea aliquid, pariatur error quibusdam laudantium consectetur, nesciunt sed? Nostrum, doloremque nulla.</p>
+        <p>Mortal Shell es una oscura aventura de acción y rol inspirada por la serie Dark Souls que nos enfrenta a enemigos y monstruos temibles capaces de extinguir nuestra vida en cuestión de segundos. Para evitarlo debes usar las esquivas, los contraataques y una buena estrategia de combate.</p>
       </section>
       <section>
         <h1 class="text-center">HOLLOW KNIGHT</h1>
@@ -310,7 +316,8 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, adipisci architecto, ab quia accusamus numquam sequi voluptatibus atque facere repellat fuga sint assumenda blanditiis maiores magnam quae quisquam beatae voluptatum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic quisquam est in ipsa, laboriosam laborum et iste unde ea aliquid, pariatur error quibusdam laudantium consectetur, nesciunt sed? Nostrum, doloremque nulla.</p>
+        <p>Hollow Knight trata sobre la búsqueda de un pequeño insecto (todos los personajes del juego son insectos) que inicia una aventura sin un objetivo fijo, atraído por las promesas de aventuras y tesoros de la antigua megalópolis de Hallownest, ahora caída en desgracia. Con ese objetivo en mente nuestro personaje llega a la ciudad de Bocasucia, donde únicamente queda su alcalde para darnos la bienvenida.</p>
+        <p>A medida que avanzamos con la exploración de la enorme Hallownest iremos descubriendo más y más hilos que se entrecruzan en la historia, descubriendo como llegó la antaño gloriosa civilización al estado de decadencia en el que se encuentra y llegando a temer que el mal que una vez amenazó el mundo esta a punto de descontrolarse de nuevo.</p>
       </section>
       <section>
         <h1 class="text-center">ELDEN RING</h1>
@@ -340,7 +347,10 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, adipisci architecto, ab quia accusamus numquam sequi voluptatibus atque facere repellat fuga sint assumenda blanditiis maiores magnam quae quisquam beatae voluptatum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic quisquam est in ipsa, laboriosam laborum et iste unde ea aliquid, pariatur error quibusdam laudantium consectetur, nesciunt sed? Nostrum, doloremque nulla.</p>
+        <p>Álzate, Sinluz, y que la gracia te guíe para abrazar el poder del Círculo de Elden y encumbrarte como señor del Círculo en las Tierras Intermedias.</p>
+        <p>En las Tierras Intermedias gobernadas por la Reina Márika, la Eterna, el Círculo de Elden, origen del Árbol Áureo, ha sido destruido.</p>
+        <p>Los descendientes de Márika, todos semidioses, reclamaron los fragmentos del Círculo de Elden conocidos como Grandes Runas. Fue entonces cuando la demencial corrupción de su renovada fuerza provocó una guerra: la Devastación.</p>
+        <p>Una guerra que supuso el abandono de la Voluntad Mayor. Y ahora, la gracia que nos guía recaerá sobre el Sinluz desdeñado por la gracia del oro y exiliado de las Tierras Intermedias. Tú que has muerto, pero vives, con tu gracia tiempo ha perdida, recorre la senda hacia las Tierras Intermedias más allá del neblinoso mar para postrarte ante el Círculo de Elden.</p>
       </section>
     </main>
     <footer class="footer">
