Imagenes y carpeta para tienda

--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -51,17 +51,15 @@
   <div class="card-group">
     <div id="card1" class="card">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <img src="../img/esnQejHW2fLjVn3QsqMORML0.avif" class="card-img-top-tienda" alt="logosekiro">
+        <h5 class="card-title">Demons Souls</h5>
+        <img src="../img/Portada Soulsliker/DSR.webp" class="card-img-top-tienda" alt="logodemonsouls">
         <div class="dropdown">
           <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Link de Compra
           </a>
         
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">PC</a></li>
-            <li><a class="dropdown-item" href="#">PS4</a></li>
-            <li><a class="dropdown-item" href="#">Xbox One</a></li>
+            <li><a class="dropdown-item" href="#">PS5</a></li>
           </ul>
         </div>
       </div>
@@ -70,8 +68,8 @@
 
   <div id="card2" class="card">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <img src="../img/esnQejHW2fLjVn3QsqMORML0.avif" class="card-img-top-tienda" alt="logosekiro">
+      <h5 class="card-title">Dark Souls</h5>
+      <img src="../img/Portada Soulsliker/Dark_Souls_Remastered_Portada.webp" class="card-img-top-tienda" alt="logodarksouls">
       <div class="dropdown">
         <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           Link de Compra
@@ -81,6 +79,7 @@
           <li><a class="dropdown-item" href="#">PC</a></li>
           <li><a class="dropdown-item" href="#">PS4</a></li>
           <li><a class="dropdown-item" href="#">Xbox One</a></li>
+          <li><a class="dropdown-item" href="#">Nintendo Swich</a></li>
         </ul>
       </div>
     </div>
@@ -89,8 +88,8 @@
 
 <div id="card3" class="card">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <img src="../img/esnQejHW2fLjVn3QsqMORML0.avif" class="card-img-top-tienda" alt="logosekiro">
+    <h5 class="card-title">Dark Souls II</h5>
+    <img src="../img/Portada Soulsliker/Dark_Souls_II_Portada.webp" class="card-img-top-tienda" alt="logodarksouls2">
     <div class="dropdown">
       <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         Link de Compra
@@ -108,8 +107,8 @@
 
 <div id="card4" class="card">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <img src="../img/esnQejHW2fLjVn3QsqMORML0.avif" class="card-img-top-tienda" alt="logosekiro">
+    <h5 class="card-title">Dark Souls III</h5>
+    <img src="../img/Portada Soulsliker/s-l1600.jpg" class="card-img-top-tienda" alt="logodarksouls3">
     <div class="dropdown">
       <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         Link de Compra
@@ -127,17 +126,15 @@
 
 <div id="card5" class="card">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <img src="../img/esnQejHW2fLjVn3QsqMORML0.avif" class="card-img-top-tienda" alt="logosekiro">
+    <h5 class="card-title">Bloodborne</h5>
+    <img src="../img/Portada Soulsliker/Sy5e8DmeKIJVjlAGraPAJYkT.jpg" class="card-img-top-tienda" alt="logobloodborne">
     <div class="dropdown">
       <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         Link de Compra
       </a>
     
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">PC</a></li>
         <li><a class="dropdown-item" href="#">PS4</a></li>
-        <li><a class="dropdown-item" href="#">Xbox One</a></li>
       </ul>
     </div>
   </div>
@@ -149,8 +146,8 @@
   <div class="card-group">
     <div id="card1" class="card">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <img src="../img/esnQejHW2fLjVn3QsqMORML0.avif" class="card-img-top-tienda" alt="logosekiro">
+        <h5 class="card-title">Sekiro Shadows Die Twice</h5>
+        <img src="../img/Portada Soulsliker/Sekiro_Cover_Art.webp" class="card-img-top-tienda" alt="logosekiro">
         <div class="dropdown">
           <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Link de Compra
@@ -168,8 +165,8 @@
 
   <div id="card2" class="card">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <img src="../img/esnQejHW2fLjVn3QsqMORML0.avif" class="card-img-top-tienda" alt="logosekiro">
+      <h5 class="card-title">Code Vein</h5>
+      <img src="../img/Portada Soulsliker/8327054.jpg" class="card-img-top-tienda" alt="logocodevein">
       <div class="dropdown">
         <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           Link de Compra
@@ -187,8 +184,8 @@
 
 <div id="card3" class="card">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <img src="../img/esnQejHW2fLjVn3QsqMORML0.avif" class="card-img-top-tienda" alt="logosekiro">
+    <h5 class="card-title">Mortal Shell</h5>
+    <img src="../img/Portada Soulsliker/c54f6d5f-2a48-41f9-9f36-38a441bdb535_1200x1600-8f81674351d5cbaa78be417ee078a80e.jpg" class="card-img-top-tienda" alt="logomortalshell">
     <div class="dropdown">
       <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         Link de Compra
@@ -206,8 +203,8 @@
 
 <div id="card4" class="card">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <img src="../img/esnQejHW2fLjVn3QsqMORML0.avif" class="card-img-top-tienda" alt="logosekiro">
+    <h5 class="card-title">Hollow Knight</h5>
+    <img src="../img/Portada Soulsliker/MV5BYTljYjM2OGYtNzU5NC00ODBiLTk4Y2ItMmE0ZDUxMzJmYWU4XkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_FMjpg_UX1000_.jpg" class="card-img-top-tienda" alt="logohollowknight">
     <div class="dropdown">
       <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         Link de Compra
@@ -217,6 +214,7 @@
         <li><a class="dropdown-item" href="#">PC</a></li>
         <li><a class="dropdown-item" href="#">PS4</a></li>
         <li><a class="dropdown-item" href="#">Xbox One</a></li>
+        <li><a class="dropdown-item" href="#">Nintendo Swich</a></li>
       </ul>
     </div>
   </div>
@@ -225,8 +223,8 @@
 
 <div id="card5" class="card">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <img src="../img/esnQejHW2fLjVn3QsqMORML0.avif" class="card-img-top-tienda" alt="logosekiro">
+    <h5 class="card-title">Elden ring</h5>
+    <img src="../img/esnQejHW2fLjVn3QsqMORML0.avif" class="card-img-top-tienda" alt="logoeldenring">
     <div class="dropdown">
       <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         Link de Compra
