pagina de error en el envio del formulario de soporte

--- a/pages/soporte.html
+++ b/pages/soporte.html
@@ -47,7 +47,7 @@
   <p>Nos interesa conocerte y saber tù opinion al respecto, saber que es lo que te gustaria, contenido que desees ver o cambios que harias. Recorda que tù opinion es de gran interes! </p>
   </section>
   <section class="media-c">
-  <form id="form-c" action="envio.php">
+  <form id="form-c" action="../pages/error404.html">
   <div class="form-floating mb-3">
     <input type="text" class="form-control" id="floatingInput" placeholder="nombre o alias">
     <label for="floatingInput">Nombre</label>
