--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -44,7 +44,10 @@
       <h1>Tienda</h1>
       <section>
           <h2>Reglas y Función de este modelo</h2>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam tenetur minima excepturi delectus, a id voluptas aut possimus quae tempora quia mollitia perferendis veritatis deserunt nobis aspernatur minus sapiente! Libero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit rem inventore dolore ut dignissimos vitae magnam provident eveniet incidunt, illo ducimus, earum possimus consectetur perferendis eius exercitationem animi deleniti laborum?</p>
+          <p>Una vez más rectifico mi nulo derecho sobre los productos que se exhiben en esta página.</p>
+          <p>Este formato este hecho con el único fin de simplificar su búsqueda a la hora de comprar alguno de los títulos ya explicados en este sitio. </p>
+          <p>Podrán redireccionarse a los sitios OFICIALES de compra a través de las botoneras respectivas al producto, si necesitan cualquier tipo de indicación o tienen una consulta pueden comunicarse con los soportes del respectivo sitio oficial. </p>
+          <p>Espero que si han llegado hasta aquí puedan empezar a jugar sin complicaciones y disfruten de alguno de estos juegos tanto como yo, que el sol los guie. </p>
       </section>
       <h3>Redireccion a sitios de compra oficiales</h3>
 <section class="media-t" >
